# official-3rd-party-standards

./: README.md
.github/workflows/: feed.yml
standards/: feed.json
standards/BSIMM/: bsimm-v13.cdx.json  bsimm-v14.cdx.json  bsimm-v15.cdx.json
standards/CISA/SSAF/: ssaf-DRAFT-2023-11.cdx.json
standards/NIST/SSDF/: nist_secure-software-development-framework_1.1.cdx.json
standards/NIST_SSDF/: nist_secure-software-development-framework_1.1.cdx.json  nist_secure-software-development-framework_1.1.json
standards/OWASP/ASVS/: asvs-4.0.3.cdx.json  asvs-5.0.0-cdx.json
standards/OWASP/MASVS/: masvs-2.1.0.cdx.json
standards/OWASP/SAMM/: owasp-samm-2.1.0.cdx.json
standards/OWASP/SCVS/: scvs-1.0.0.cdx.json
standards/OWASP_ASVS/: asvs-4.0.3.cdx.json
standards/OWASP_MASVS/: masvs-2.0.0.cdx.json
standards/OWASP_SCVS/: scvs-1.0.0.cdx.json
standards/PCI_Security_Standards_Council/Secure_SLC/: pcissc-secure-slc-1.1.cdx.json
tools/bsimm-generator/: README.md  convert.py
tools/cisa-ssaf-generation/: README.md  Secure-Software-Development-Attestation-Form_508c.yml  generate.sh  pyproject.toml
tools/cisa-ssaf-generation/attestation_generator/: main.py
tools/nist-ssdf-standard-generation/: README.md  generate.sh  pyproject.toml
tools/nist-ssdf-standard-generation/attestation_generator/: main.py
tools/nist-ssdf-standard-generation/attestation_generator/templates/: requirement.template  ssdf-1.1.json.template
tools/pci-secure-slc-converter/: Machine_Readable_Secure_SLC_v1-1.csv  README.md  convert.py
(+2 files in other folders)
